--- a/website/index.html
+++ b/website/index.html
@@ -1,5 +1,5 @@
 <body bgcolor = 'green'>
 
-<h1> Welcome to my webpage running on k8s </h1> 
+<h1> Welcome to my webpage running on jenkins</h1> 
 
 </body>
