--- a/website/index.html
+++ b/website/index.html
@@ -1,5 +1,5 @@
-<body bgcolor = 'yellow'>
+<body bgcolor = 'light blue'>
 
-<h1> Welcome to my webpage running on jenkins </h1> 
+<h1> Welcome to my webpage running on k8s </h1> 
 
 </body>
