--- a/website/index.html
+++ b/website/index.html
@@ -1,5 +1,5 @@
-<body bgcolor = 'yellow'>
+<body bgcolor = 'aqua'>
 
-<h1> This is Rushabh </h1> 
+<h1> Hello this is my webpage running in jenkins </h1> 
 
 </body>
