--- a/website/index.html
+++ b/website/index.html
@@ -1,5 +1,5 @@
-<body bgcolor = 'aqua'>
+<body bgcolor = 'yello'>
 
-<h1> Hello this is my webpage running in jenkins </h1> 
+<h1> Hello rushabh this side </h1> 
 
 </body>
